--- a/src/components/product-card/styles.module.css
+++ b/src/components/product-card/styles.module.css
@@ -1,9 +1,29 @@
-form {
-    background-color: purple;
+.productCard {
+    background-color: var(--tertiary-color);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 250px;
-    height: 300px;
+    width: 350px;
+    min-height: 300px;
     place-items: center;
+    padding: 1rem;
+    border-radius: var(--radius);
+    gap: 1rem;
+}
+
+.productImg {
+    width: 200px;
+    height: 100%;
+}
+
+.imgContainer {
+    background-color: var(--secondary-color);
+    width: 100%;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+}
+
+.productTitle {
+    height: 70px;
 }
