--- a/src/pages/home/styles.module.css
+++ b/src/pages/home/styles.module.css
@@ -1,42 +1,46 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.container {
+  width: 100dvw;
+  height: 100dvh;
+  background: center url('../../assets/home.jpg');
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contentContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  color: var(--background-color1);
   text-align: center;
+  background: radial-gradient(closest-side, #ddd2, transparent);
+  backdrop-filter: blur(1px);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.link {
+  animation: translate 1s alternate-reverse infinite;
+  color: var(--background-color1);
 }
 
-@keyframes logo-spin {
+.link:hover svg {
+  transform: scale(1.5);
+  color: var(--primary-color);
+}
+
+.link:hover {
+  animation: none;
+}
+
+@keyframes translate {
   from {
-    transform: rotate(0deg);
+    transform: translateX(-10px);
   }
+
   to {
-    transform: rotate(360deg);
+    transform: translateX(10px);
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
