--- a/src/components/navbar/styles.module.css
+++ b/src/components/navbar/styles.module.css
@@ -6,8 +6,7 @@
     gap: 2rem;
     position: fixed;
     top: 0;
-    height: 50px;
-    background-color: var(--primary-color);
-    padding: 0.2rem;
+    background: linear-gradient(var(--background-color1), transparent);
+    padding: 1rem;
     z-index: 1;
 }
