--- a/src/pages/home/styles.module.css
+++ b/src/pages/home/styles.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100dvw;
   height: 100dvh;
-  background: center url('../../assets/home.jpg');
+  background: center url("../../assets/home.jpg");
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  color: var(--background-color1);
+  color: white;
   text-align: center;
   background: radial-gradient(closest-side, #ddd2, transparent);
   backdrop-filter: blur(1px);
@@ -22,7 +22,7 @@
 
 .link {
   animation: translate 1s alternate-reverse infinite;
-  color: var(--background-color1);
+  color: white;
 }
 
 .link:hover svg {
@@ -42,5 +42,4 @@
   to {
     transform: translateX(10px);
   }
-
 }
